--- a/Languages/default-chs.xml
+++ b/Languages/default-chs.xml
@@ -413,6 +413,7 @@
 		<button id="ID_CHAT_CONNECT" text="连接" visible="false"/>
 		<button id="ID_CHAT_DISCONNECT" text="断开"/>
 	</toolbar>
+	<!-- WEBSERVICES -->
 	<!-- IMAGE VIEWER WINDOW -->
 		<toolbar name="ImageViewer_Toolbar">
 			<button id="ImageViewer_BestFit" text="最佳适合"/>
@@ -1723,13 +1724,10 @@
 		<text format="b">欢迎来到设置管理器</text>
 		<newline gap="16"/>
 
-		<text>
-			设置管理器使得高级用户可以完全定制 Shareaza 的工作方式。此
+		<text> 设置管理器使得高级用户可以完全定制 Shareaza 的工作方式。此
 		</text>
 		<text format="b">常规</text>
-		<text>
-			部分的设置与用户的经验存在密切关系。
-		</text>
+		<text>部分的设置与用户的经验存在密切关系。</text>
 		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CGeneralSettingsPage" format="b">常规:</link>
@@ -3208,7 +3206,8 @@
 		<control caption="工具提示(_T):"/>
 		<control/>
 		<control caption="迟延(ms):"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="透明度:"/>
 		<control/>
 		<control caption="系统托盘(_T):"/>
@@ -3226,10 +3225,12 @@
 		<control caption="允许他人浏览共享"/>
 		<control caption="近期文件(_R):"/>
 		<control caption="记住:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="文件"/>
 		<control caption="最多:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="天"/>
 		<control caption="立即清除历史"/>
 		<control caption="安全的扩展名(_S):"/>
@@ -3241,7 +3242,8 @@
 		<control caption="添加(_A)"/>
 		<control caption="移除(_R)"/>
 		<control caption="在这里储存收集(_C):"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="当删除时建立回收文件"/>
 	</dialog>
 
@@ -3312,28 +3314,36 @@
 		<control caption="启用 UPnP 连接驱动器设置"/>
 		<control caption="超时(_T):"/>
 		<control caption="连接:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="握手:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuEdBuBuStEdmsStEdmsStEdmsBuStCoStCoBuBu" caption="下载">
 		<control caption="在这里保存已完成文件(_C):"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="在这里保存未完成文件(_I):"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="下载数值(_N):"/>
 		<control caption="最大文件数目:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="最大传送数目:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="每个文件传送数:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="限制(_L):"/>
 		<control caption="全部下载带宽:"/>
 		<control/>
 		<control caption="最大排队长度:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="只在已连接的网络下载和上传。"/>
 	</dialog>
 
@@ -3343,7 +3353,8 @@
 		<control caption="集端模式下限制共享"/>
 		<control caption="共享预览文件"/>
 		<control caption="对唯一的主机进行限制:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="用户代理过滤(_U):"/>
 		<control/>
 		<control caption="+"/>
@@ -3377,7 +3388,8 @@
 	<dialog name="CSchedulerSettingsPage" cookie="BuBuEdmsBuBuStStStStStStStStStStStEdBuSt" caption="计划">
 		<control caption="选项(_O):"/>
 		<control caption="启用计划(_E)"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="仅在受到限制时连接到 G2(_C)"/>
 		<control caption="关键词:"/>
 		<control caption="周日"/>
@@ -3420,11 +3432,14 @@
 		<control caption="最优|子端|集端"/>
 		<control caption="G2 连接(_2):"/>
 		<control caption="子端到集端:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="集端到子端:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="集端到集端:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Gnutella1 网络:"/>
 		<control caption="总是连接到 Gnutella1"/>
 		<control caption="今天连接到 Gnutella1"/>
@@ -3432,11 +3447,14 @@
 		<control caption="最优|子端|超对等"/>
 		<control caption="G1 连接(_1):"/>
 		<control caption="子端到超对等:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="超对等到子端:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="对等到对等:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="链接压缩(_L):"/>
 		<control caption="集端到子端"/>
 		<control caption="子端到集端"/>
@@ -3450,12 +3468,14 @@
 		<control caption="全局搜索(_G):"/>
 		<control caption="在服务器缓存中搜索已知远程服务器:"/>
 		<control caption="搜索停止于:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="个搜索结果。"/>
         <control caption="从连接接收和更新服务器列表"/>
 		<control caption="客户端链接连接(_C):"/>
 		<control caption="连接不多于:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="其他 eDonkey 客户端。"/>
 		<control caption="eDonkey 工具(_T):"/>
 		<control caption="导入 eDonkey/eMule 未完成下载 (.part):"/>
@@ -3468,19 +3488,25 @@
 		<control caption="界面(_I):"/>
 		<control caption="显示 BitTorrent 额外的界面元素"/>
 		<control caption="下载连接(_D):"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="个 Torrent 一次"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="个客户端连接"/>
 		<control caption="&#160;清除已下载的 Torrent&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;当共享比率达到"/>
-		<control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="&#160;Torrent 资源优先"/>
 		<control caption="最终阶段(_E):"/>
 		<control caption="在完成 Torrent 时启用最终阶段模式"/>
 		<control caption="在这里保存 Torrent(_S):"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Torrent 制作工具(_T)"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="默认 Tracker:"/>
 		<control/>
 	</dialog>
@@ -3519,7 +3545,8 @@
 		<control/>
 		<control caption="设置属性:"/>
 		<control caption="赋值:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="描述:"/>
 		<control/>
 	</dialog>
@@ -3543,18 +3570,23 @@
 		<control caption="容量(_C):"/>
 		<control caption="启用此队列"/>
 		<control caption="最小传送数目:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="最大传送数目:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="队列中等待的最大数目:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="服务参数(_S):"/>
 		<control caption="带宽饱和百分比:"/>
 		<control/>
 		<control caption="此队列的上传带宽:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="N 秒后轮询:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="确定"/>
 		<control caption="取消"/>
 		<control caption="奖励上传者"/>
@@ -3575,19 +3607,7 @@
 		<control caption="开始使用 Shareaza。"/>
 	</dialog>
 
-	<dialog name="CWizardInterfacePage" cookie="StBuBuBuStStBuBuBu" caption="欢迎使用 Shareaza">
-		<control caption="Shareaza 支持不同的用户界面，因此您可以选择最适合您的界面。您可以在任何时候改变这些选项"/>
-		<control caption="请选择用户界面:"/>
-		<control caption="普通模式"/>
-		<control caption="增强模式"/>
-		<control caption="简单，易用的菜单和按钮。{n}与其他的文件共享程序相似的界面。"/>
-		<control caption="增强模式提供给专家用户更多的命令和窗口等。{n}可能对新用户来说有点困难！"/>
-		<control caption="显示简单的下载进程栏。(减小 CPU 负荷)"/>
-		<control caption="显示额外的 Torrent 界面元素。"/>
-		<control caption="监视 Torrent 链接"/>
-	</dialog>
-
-	<dialog name="CWizardConnectionPage" cookie="StCoStCoStCoStCoStCoStms" caption="欢迎使用 Shareaza [7 之 3]">
+	<dialog name="CWizardConnectionPage" cookie="StCoStCoStCoStCoStCoStms" caption="欢迎使用 Shareaza (1/6)">
 		<control caption="为获得最佳效果，Shareaza 必须知道您的互联网连接。"/>
 		<control caption="&#160;(请选择)| 我在家中使用互联网| 我通过大学的局域网连接到互联网| 我通过办公室中的局域网连接到互联网| 我在旅馆或机场使用互联网"/>
 		<control caption="您的网络是否被防火墙保护，或者使用了 NAT 路由？"/>
@@ -3602,7 +3622,7 @@
 		<control/>
 	</dialog>
 
-	<dialog name="CWizardSharePage" cookie="StStStSyBuBuSt" caption="欢迎使用 Shareaza [7 之 4]">
+	<dialog name="CWizardSharePage" cookie="StStStSyBuBuSt" caption="欢迎使用 Shareaza (2/6)">
 		<control caption="P2P 网络和使用他们的人一样重要。所有的可用的内容由另外的用户共享。"/>
 		<control caption="使用 Shareaza 您没有必要共享任何文件，但是如果用户不共享任何文件某些软件会有不同的反应。"/>
 		<control caption="请指出要共享的一个或多个共享文件。点击添加按钮进行添加新的文件夹。"/>
@@ -3622,7 +3642,7 @@
 		<control caption="关闭"/>
 	</dialog>
 
-	<dialog name="CWizardProfilePage" cookie="StStEdStCoCoStCoCo" caption="欢迎使用 Shareaza [7 之 5]">
+	<dialog name="CWizardProfilePage" cookie="StStEdStCoCoStCoCo" caption="欢迎使用 Shareaza (3/6)">
 		<control caption="Shareaza 将会变成一个更为友好的地方如果每个人都写一点关于他们自己的信息。"/>
 		<control caption="我使用的名称:"/>
 		<control/>
@@ -3630,10 +3650,23 @@
 		<control caption="&#160;(选择)"/>
 		<control caption="&#160;(选择)| 男孩| 女孩| 男人| 女人"/>
 		<control caption="来自于:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
-	<dialog name="CWizardNetworksPage" cookie="StBuStBuStBuSt" caption="欢迎使用 Shareaza [7 之 6]">
+	<dialog name="CWizardInterfacePage" cookie="StBuBuBuStStBuBuBu" caption="欢迎使用 Shareaza (4/6)">
+		<control caption="Shareaza 支持不同的用户界面，因此您可以选择最适合您的界面。您可以在任何时候改变这些选项"/>
+		<control caption="请选择用户界面:"/>
+		<control caption="普通模式"/>
+		<control caption="增强模式"/>
+		<control caption="简单，易用的菜单和按钮。{n}与其他的文件共享程序相似的界面。"/>
+		<control caption="增强模式提供给专家用户更多的命令和窗口等。{n}可能对新用户来说有点困难！"/>
+		<control caption="显示简单的下载进程栏。(减小 CPU 负荷)"/>
+		<control caption="显示额外的 Torrent 界面元素。"/>
+		<control caption="监视 Torrent 链接"/>
+	</dialog>
+
+	<dialog name="CWizardNetworksPage" cookie="StBuStBuStBuSt" caption="欢迎使用 Shareaza (5/6)">
 		<control caption="Shareaza 是能够同时连接多个 P2P 网络的多用途的文件共享软件。在此您可以选择想要连接的网络。您总是可以在以后选择不同的网络。"/>
 		<control caption="连接到 Gnutella2(强烈推荐)"/>
 		<control caption="Gnutella2 网络是 Shareaza 的主网络，相对其他 P2P 网提供了更多的特性和更具优点。强烈推荐。"/>
@@ -3652,7 +3685,7 @@
 		<control caption="关闭"/>
 	</dialog>
 
-	<dialog name="CWizardFinishedPage" cookie="StStStBuBuBuSt" caption="欢迎使用 Shareaza [7 之 7]">
+	<dialog name="CWizardFinishedPage" cookie="StStStBuBuBuSt" caption="欢迎使用 Shareaza (6/6)">
 		<control caption="非常好！Shareaza 已经在您的电脑上被配置准备工作。"/>
 		<control caption="如果需要变更设置，您可以从工具菜单再次运行快速启动向导。"/>
 		<control caption="点击结束关闭向导后，您可以连接到选定的网络开始搜索和下载内容。"/>
@@ -3675,7 +3708,8 @@
 		<control caption="屏显名称:"/>
 		<control/>
 		<control caption="真实姓名:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="基本信息(_V):"/>
 		<control caption="|男|女"/>
 		<control caption="性别:"/>
@@ -3763,7 +3797,8 @@
 
 	<dialog name="CConnectToDlg" cookie="BuCoEdBuCoBuBuBu" caption="连接到|浏览用户">
 		<control caption="初始化新的连接到主机或服务器:|浏览该用户:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="网络协议(_P):"/>
 		<control caption="Gnutella1 (自动)|Gnutella2 (自动)|edonkey"/>
 		<control caption="抑制超对等(_S)"/>
@@ -3772,7 +3807,8 @@
 	</dialog>
 
 	<dialog name="CDownloadDlg" cookie="StStStEdBuBuStStBu" caption="下载文件或 Torrent">
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="使用 Shareaza 下载任何文件都很容易。只需要输入或粘贴链接地址或者 URI 描述到以下的方框中，然后按下回车。"/>
 		<control/>
 		<control caption="下载"/>
@@ -3783,7 +3819,8 @@
 	</dialog>
 
 	<dialog name="CNewSearchDlg" cookie="EdCoBuBu" caption="新建搜索|重新搜索|在收藏中查找">
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="搜索"/>
 		<control caption="取消"/>
 	</dialog>
@@ -3798,7 +3835,8 @@
 		<control caption="最大:"/>
 		<control/>
 		<control caption="至少:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="个资源。"/>
 		<control caption="隐藏(_H):"/>
 		<control caption="繁忙主机"/>
@@ -3838,7 +3876,9 @@
 	<dialog name="CDownloadMonitorDlg" cookie="StStStStStStStStStStStStStBuBuBuBuBu" caption="下载 : Shareaza">
 		<control caption="Shareaza 正在下载:"/>
 		<control caption="..."/>
-		<control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="总体传送速度:"/>
 		<control caption="..."/>
 		<control caption="估计剩余时间:"/>
@@ -3856,7 +3896,10 @@
 
 	<dialog name="CFileGeneralPage" cookie="StEdEdEdEdStStEdStEdStEdStEdEdEd" caption="常规">
 		<control caption="通用资源名称 (URN)"/>
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="文件属性"/>
 		<control caption="位置:"/>
 		<control/>
@@ -3865,11 +3908,14 @@
 		<control caption="修改:"/>
 		<control/>
 		<control caption="大小:"/>
-		<control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CFileMetadataPage" cookie="CoEd" caption="元数据">
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CFileCommentsPage" cookie="StStCoStEdEd" caption="评价">
@@ -3877,7 +3923,8 @@
 		<control caption="我对此文件的评级:"/>
 		<control caption="(未评级)|假的/损坏/误导|差的|一般|不错|很好|极棒"/>
 		<control caption="我的评价和注释"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CFileSharingPage" cookie="StBuBuBuStCoStSyEd" caption="共享">
@@ -3888,13 +3935,15 @@
 		<control caption="上传队列选择标签"/>
 		<control/>
 		<control caption="-共享的网络"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CFileSourcesPage" cookie="StStEdSyBuBuEd" caption="资源">
 		<control caption="已知资源"/>
 		<control caption="添加新的资源"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="添加(_A)"/>
 		<control caption="移除(_R)"/>
 		<control/>
@@ -3902,7 +3951,8 @@
 
 	<dialog name="CFileCopyDlg" cookie="StStmsBuBumsStSt" caption="复制文件|移动文件">
 		<control caption="您选定了 %i 个文件复制到下列文件夹:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="确定"/>
 		<control caption="取消"/>
 		<control/>
@@ -3932,7 +3982,8 @@
 		<control caption="图例"/>
 		<control caption="采样频率(_F):"/>
 		<control caption="采样周期:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="毫秒"/>
 		<control caption="名称(_N):"/>
 		<control/>
@@ -3944,7 +3995,8 @@
 		<control caption="确定"/>
 		<control caption="取消"/>
 		<control caption="资源(_S):"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="参数:"/>
 		<control caption="单位:"/>
 		<control/>
@@ -3955,7 +4007,8 @@
 	</dialog>
 
 	<dialog name="CSchemaColumnsDlg" cookie="CoSyBuBuSt" caption="从架构中选择列">
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="确定"/>
 		<control caption="取消"/>
 		<control caption="从列表中选择种类，然后选择要显示的项目。"/>
@@ -3969,9 +4022,15 @@
 		<control/>
 		<control caption="网络地址(_N):"/>
 		<control caption="IP 地址:"/>
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="网络掩码:"/>
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="内容过滤(_C):"/>
 		<control/>
 		<control caption="任意匹配"/>
@@ -4004,7 +4063,9 @@
 	<dialog name="CURLCopyDlg" cookie="StStStStStBuBu" caption="复制 URI">
 		<control/>
 		<control caption="您可以用多种不同的格式为选定的项目复制 URI。请通过点击下列某一 URI 选择您希望使用的格式:"/>
-		<control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="将自己作为固定的资源包含在链接中(_M)"/>
 		<control caption="取消"/>
 	</dialog>
@@ -4028,7 +4089,10 @@
 		<control caption="您点击的 Shareaza URI 链接到以下的网络:"/>
 		<control caption="您点击的 Shareaza 链接将会连接您到以下主机或服务器:"/>
 		<control caption="您点击的 Shareaza URI 允许您浏览以下可用主机的共享文件:"/>
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="请选择您希望 Shareaza 采取的操作:"/>
 		<control caption="立即下载(_D)"/>
 		<control caption="搜索文件(_S)"/>
@@ -4050,7 +4114,8 @@
 	<dialog name="CFilePreviewDlg" cookie="StStStmsStBu" caption="智能下载预览...">
 		<control/>
 		<control caption="Shareaza 正在创建下载的预览:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="(复制下载区块到新的预览文件)"/>
 		<control caption="取消"/>
 	</dialog>
@@ -4078,7 +4143,10 @@
 	</dialog>
 
 	<dialog name="CExistingFileDlg" cookie="StStStStStBuBuBuBuBuStSt" caption="文件已存在">
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="您的收藏中已经存在此文件。您希望怎样做？"/>
 		<control caption="显示收藏中的这个文件"/>
 		<control caption="重新下载此文件"/>
@@ -4102,7 +4170,8 @@
 	<dialog name="CDonkeyServersDlg" cookie="StStEdmsBuBu" caption="下载 Server.met 文件">
 		<control/>
 		<control caption="您能从网络上下载 edonkey server.met 文件来刷新您的本地服务器列表。"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="确定"/>
 		<control caption="取消"/>
 	</dialog>
@@ -4148,17 +4217,21 @@
 		<control caption="警告: 此对话框为高级用户提供下载编辑功能，如果使用不当可能会使软件停止工作。"/>
 		<control caption="文件名称和大小(_Z):"/>
 		<control caption="文件名称:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="文件大小(字节):"/>
 		<control/>
 		<control caption="URN(_U):"/>
 		<control caption="信任"/>
 		<control caption="SHA1:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Tiger-Root:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="ED2K:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="操作(_A):"/>
 		<control caption="忽略当前验证状态和重检"/>
 		<control caption="假设文件 100％ 完整并重检"/>
@@ -4232,7 +4305,8 @@
 
 	<dialog name="CDownloadGroupDlg" cookie="BuEdSyBuCoBuBuBuBuBuEdBu" caption="下载组属性">
 		<control caption="名称(_N):"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="过滤_F):"/>
 		<control/>
 		<control caption="添加(_A)"/>
@@ -4265,7 +4339,8 @@
 	<dialog name="CDownloadReviewDlg" cookie="StBuSyEd" caption="下载评价">
 		<control/>
 		<control caption="确定"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CDecodeMetadataDlg" cookie="BuBuStCo" caption="元数据本地化">
