--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -427,6 +427,7 @@
 		<button id="ID_CHAT_CONNECT" text="Connect" visible="false"/>
 		<button id="ID_CHAT_DISCONNECT" text="Disconnect"/>
 	</toolbar>
+	<!-- WEBSERVICES -->
 	<toolbar name="WebServices.ShareMonkey">
 		<button id="ID_SHAREMONKEY_DOWNLOAD" text="Get Data"/>
 		<separator/>
@@ -547,9 +548,9 @@
 			</menu>
 			<separator/>
 			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
+			<item id="ID_HELP_DONATE" text="_Donate to the Shareaza Project"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_About Shareaza..."/>
-			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 		</menu>
 	</menu>
 	<menu name="CMainWnd.Tabbed" type="bar">
@@ -646,9 +647,9 @@
 			</menu>
 			<separator/>
 			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
+			<item id="ID_HELP_DONATE" text="_Donate to the Shareaza Project"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_About Shareaza..."/>
-			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 		</menu>
 	</menu>
 	<menu name="CMainWnd.Windowed" type="bar">
@@ -738,9 +739,9 @@
 			</menu>
 			<separator/>
 			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
+			<item id="ID_HELP_DONATE" text="_Donate to the Shareaza Project"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_About Shareaza..."/>
-			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 		</menu>
 	</menu>
 	<!-- VIEW POPUP -->
@@ -1835,14 +1836,10 @@
 		</styles>
 		<text format="b">Welcome to Shareaza's Settings Manager</text>
 		<newline gap="16"/>
-		<text>
-			The Shareaza Settings Manager allows advanced users to completely customise how
-			Shareaza works. The settings in the 
-		</text>
+		<text>The Shareaza Settings Manager allows advanced users to completely customise
+			how	Shareaza works. The settings in the </text>
 		<text format="b">General </text>
-		<text>
-			section relate to the user experience.
-		</text>
+		<text>section relate to the user experience.</text>
 		<newline gap="16" indent="16"/>
 		<link target="raza:page:CGeneralSettingsPage" format="b">General:</link>
 		<gap size="4"/>
@@ -1876,10 +1873,10 @@
 		</styles>
 		<text format="b">Welcome to Shareaza's Settings Manager</text>
 		<newline gap="16"/>
-		<text>	The Shareaza Settings Manager allows advanced users to completely customise 
+		<text>The Shareaza Settings Manager allows advanced users to completely customise 
 			how Shareaza works. The settings in the </text>
 		<text format="b">Internet </text>
-		<text>	section control how Shareaza interacts with other nodes within distributed peer-to-peer networks. </text>
+		<text>section control how Shareaza interacts with other nodes within distributed peer-to-peer networks. </text>
 		<newline gap="16" indent="16"/>
 		<link target="raza:page:CConnectionSettingsPage" format="b">Connection:</link>
 		<gap size="4"/>
@@ -4175,7 +4172,10 @@
 		<control caption="You have clicked on a Shareaza-powered URI which links to the following content on the network:"/>
 		<control caption="You have clicked on a Shareaza-powered URL which will connect you to the following host or server:"/>
 		<control caption="You have clicked on a Shareaza-powered URI which will allow you to browse the shared files available on the following host:"/>
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="Please select the action you would like Shareaza to take:"/>
 		<control caption="_Download Now"/>
 		<control caption="_Search for File"/>
@@ -4195,7 +4195,8 @@
 	<dialog name="CFilePreviewDlg" cookie="StStStmsStBu" caption="Smart Download Preview...">
 		<control/>
 		<control caption="Shareaza is creating a preview of the download:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="(copying downloaded chunks to a new preview file)"/>
 		<control caption="Cancel"/>
 	</dialog>
@@ -4220,7 +4221,10 @@
 		<control caption="OK"/>
 	</dialog>
 	<dialog name="CExistingFileDlg" cookie="StStStStStBuBuBuBuBuStSt" caption="Existing File">
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="You already have this file in your file library. What would you like to do?"/>
 		<control caption="Show me the file in my library"/>
 		<control caption="Download the file again"/>
@@ -4242,7 +4246,8 @@
 	<dialog name="CDonkeyServersDlg" cookie="StStEdmsBuBu" caption="Download Server.met File">
 		<control/>
 		<control caption="You can download an eDonkey server.met file from the web to refresh your local list of servers."/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="OK"/>
 		<control caption="Cancel"/>
 	</dialog>
@@ -4398,7 +4403,8 @@
 	<dialog name="CDownloadReviewDlg" cookie="StBuSyEd" caption="Download Reviews">
 		<control/>
 		<control caption="OK"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 	<dialog name="CDecodeMetadataDlg" cookie="StCoBuBuBuStStBuBu" caption="Metadata Localisation">
 		<control caption="Please select the method of re-encoding:"/>
