--- a/Languages/default-sr.xml
+++ b/Languages/default-sr.xml
@@ -45,6 +45,7 @@
 		<button id="ID_TAB_SEARCH" text="Traži"/>
 		<button id="ID_TAB_TRANSFERS" text="Razmena"/>
 		<button id="ID_TAB_NETWORK" text="Mreža"/>
+		<button id="ID_TAB_IRC" text="IRC"/>
 	</toolbar>
 	<toolbar name="CMainWnd.Windowed">
 		<button id="ID_NETWORK_CONNECT" text="Spoji"/>
@@ -57,6 +58,7 @@
 		<button id="ID_VIEW_UPLOADS"/>
 		<button id="ID_VIEW_LIBRARY"/>
 		<button id="ID_VIEW_MEDIA"/>
+		<button id="ID_TAB_IRC"/>
 		<button id="ID_VIEW_SECURITY"/>
 		<button id="ID_VIEW_HOSTS"/>
 		<button id="ID_VIEW_DISCOVERY"/>
@@ -407,6 +409,8 @@
 		<button id="ID_CHAT_CONNECT" text="Spoji" visible="false"/>
 		<button id="ID_CHAT_DISCONNECT" text="Isključi"/>
 	</toolbar>
+	<!-- WEBSERVICES -->
+	<!-- IMAGE VIEWER ? -->
 </toolbars>
 
 <!-- Menu Definitions -->
@@ -1704,41 +1708,34 @@
 
 		<text format="b">Dobrodošli u Shareazin Pomoćnik za Podešavanja</text>
 		<newline gap="16"/>
-
-		<text>
-			Shareazin Pomoćnik za Podešavanja omogućuje naprednim korisnicima da
-			podese Shareazu po svom ukusu.Podešavanja u
-		</text>
+		<text>Shareazin Pomoćnik za Podešavanja omogućuje naprednim korisnicima da
+			podese Shareazu po svom ukusu.Podešavanja u	</text>
 		<text format="b">Opšta </text>
-		<text>
-			kakva će biti zavise od vašeg iskustva.
-		</text>
+		<text>kakva će biti zavise od vašeg iskustva.</text>
 		<newline gap="16" indent="16"/>
-
 		<link target="raza:page:CGeneralSettingsPage" format="b">Opšta:</link>
 		<gap size="4"/>
 		<text>Podešavanja vezane za korisničko izgled(interfejs), brzu pomoć, ponašanje kod zatvaranja, formata brojeva i sl.</text>
 		<newline gap="10"/>
-
 		<link target="raza:page:CLibrarySettingsPage" format="b">Kolekcija:</link>
 		<gap size="4"/>
 		<text>Prikaz i podešavanje vaše kolekcije i otvaranje datoteka.</text>
 		<newline gap="10"/>
-
 		<link target="raza:page:CMediaSettingsPage" format="b">Media Player:</link>
 		<gap size="4"/>
 		<text>Kada i gde će Shareaza koristiti njen Media Centar.</text>
 		<newline gap="10"/>
-
 		<link target="raza:page:CCommunitySettingsPage" format="b">Zajednica:</link>
 		<gap size="4"/>
 		<text>Vaš profil, podešavanja vezane uz chat i instant messaging.</text>
 		<newline gap="10"/>
-
+		<link target="raza:page:CIRCSettingsPage" format="b">IRC:</link>
+		<gap size="4"/>
+		<text>IRC chatroom visual appearance and connection settings.</text>
+		<newline gap="10"/>
 		<link target="raza:page:CWebSettingsPage" format="b">Web:</link>
 		<gap size="4"/>
 		<text>Povežite Shareazu sa preglednikom interneta da prihvata skidanje i P2P linkove.</text>
-		<newline gap="10"/>
 
 	</document>
 
@@ -1752,38 +1749,30 @@
 
 		<text format="b">Dobrodošli u Shareazazin Pomoćnik za Podešavanja</text>
 		<newline gap="16"/>
-
-		<text>
-			Shareazin Pomoćnik za Podešavanja omogućuje naprednim korisnicima da
-			podese Shareazu po svom ukusu.Podešavanja u
-		</text>
+		<text>Shareazin Pomoćnik za Podešavanja omogućuje naprednim korisnicima da
+			podese Shareazu po svom ukusu.Podešavanja u	</text>
 		<text format="b">Internet </text>
-		<text>
-			delu određuje kako Shareaza komunicira sa ostalim čvorovima u P2P
-			mreži.
-		</text>
+		<text>delu određuje kako Shareaza komunicira sa ostalim čvorovima u P2P	mreži.</text>
 		<newline gap="16" indent="16"/>
-
 		<link target="raza:page:CConnectionSettingsPage" format="b">Veza:</link>
 		<gap size="4"/>
 		<text>Brzina i mogućnosti vaše Internet veze.</text>
 		<newline gap="10"/>
-
 		<link target="raza:page:CDownloadsSettingsPage" format="b">Skidanje:</link>
 		<gap size="4"/>
 		<text>Odredite podešavanja vezana za skidanje, poput brzine i broja trenutnih skidanja.</text>
 		<newline gap="10"/>
-
 		<link target="raza:page:CUploadsSettingsPage" format="b">Deljenje:</link>
 		<gap size="4"/>
 		<text>Mogućnosti, ograničenja i ostale podešavanja vezana uz deljenje i davanje datoteka.</text>
 		<newline gap="10"/>
-
 		<link target="raza:page:CRemoteSettingsPage" format="b">Pristup na daljinu:</link>
 		<gap size="4"/>
 		<text>Omogućuje udaljeno kontrolisanje Shreaze preko Internet preglednika.</text>
 		<newline gap="10"/>
-
+		<link target="raza:page:CSchedulerSettingsPage" format="b">Scheduler:</link>
+		<gap size="4"/>
+		<text>Limit download connections based on a periodic schedule.</text>
 	</document>
 
 	<!-- Browse User Profile -->
@@ -3183,7 +3172,8 @@
 		<control caption="BrzaP_omoć:"/>
 		<control/>
 		<control caption="Kašnjenje(ms):"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Prozirnost:"/>
 		<control/>
 		<control caption="_Tray:"/>
@@ -3201,10 +3191,12 @@
 		<control caption="Dopusti drugima da vide šta delite"/>
 		<control caption="Ko_rištene Datoteke:"/>
 		<control caption="Pamti:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="datoteka"/>
 		<control caption="Do:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="dana"/>
 		<control caption="Sad Obriši Zapamćene"/>
 		<control caption="_Sigurno za Otvoriti:"/>
@@ -3216,7 +3208,8 @@
 		<control caption="Dod_aj"/>
 		<control caption="Ukloni"/>
 		<control caption="Ovde Sačuvaj Kolek_cije:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Create ghost files when deleting"/>
 	</dialog>
 
@@ -3284,28 +3277,36 @@
 		<control caption="Zanemari privatne/lokalne IP adrese"/>
 		<control caption="_Timeouts:"/>
 		<control caption="Veza:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Pozdrava:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuEdBuBuStEdmsStEdmsStEdmsBuStCoStCoBuBu" caption="Skidanje">
 		<control caption="Skinute Datoteke Sačuvaj Ovde:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Nezavršene Datoteke Sačuv_j Ovde:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Broj Skida_nja:"/>
 		<control caption="Maximum Datoteka:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Maximum Razmena:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Razmena po Datoteci:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Granice:"/>
 		<control caption="Totalna Brzina Skidanja:"/>
 		<control/>
 		<control caption="Maximalna Dužina Čekanja:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Skidaj i deli samo sa spojenih mreža"/>
 	</dialog>
 
@@ -3315,7 +3316,8 @@
 		<control caption="Ograniči deljenje u Hubu"/>
 		<control caption="Deli preview Datoteke"/>
 		<control caption="Ograniči za pojedinca na:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="_User-Agent Filter:"/>
 		<control/>
 		<control caption="+"/>
@@ -3349,7 +3351,8 @@
 	<dialog name="CSchedulerSettingsPage" cookie="BuBuEdmsBuBuStStStStStStStStStStStEdBuSt" caption="Plan Skidanja">
 		<control caption="_Opcije:"/>
 		<control caption="Uključi Plan"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Spoji se na G2 samo pod ograničenjem"/>
 		<control caption="Legenda:"/>
 		<control caption="Ned"/>
@@ -3392,11 +3395,14 @@
 		<control caption="Optimalno|Leaf|Hub"/>
 		<control caption="G_2 Veze:"/>
 		<control caption="Leaf u Hub:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Hub u Leaf:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Hub u Hub:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Gnutella1 Mreža:"/>
 		<control caption="Uvek se spoji na Gnutellu1"/>
 		<control caption="Spoji se na Gnutellu1"/>
@@ -3404,11 +3410,14 @@
 		<control caption="Optimalno|Leaf|Ultrapeer"/>
 		<control caption="G_1 Veze:"/>
 		<control caption="Leaf u Ultrapeer:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Ultrapeer u Leaf:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Peer u Peer:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Kompresija _Linka:"/>
 		<control caption="Hub u Leaf"/>
 		<control caption="Leaf u Hub"/>
@@ -3422,11 +3431,13 @@
 		<control caption="Kod pretraživanja:"/>
 		<control caption="Traži samo u poznatim serverima u server cachu:"/>
 		<control caption="Zaustavi potragu nakon:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="rezultata potrage."/>
 		<control caption="_Client Link Veze:"/>
 		<control caption="Ne spajaj se na više od:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="drugih eDonkey klijenta."/>
 		<control caption="eDonkey2000 Ala_ti:"/>
 		<control caption="Ubaci eDonkey/eMule delimična skidanja (.part):"/>
@@ -3439,19 +3450,25 @@
 		<control caption="Izgled(interface):"/>
 		<control caption="Prikaži dodatne BitTorrent elemente"/>
 		<control caption="Podešavanja ski_danja:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Istovremenih Torrenta"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Klijent veze"/>
 		<control caption="&#160;Ukloni skinunte torrente&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Kada omer deljenja dođe do"/>
-        <control/><control/><control/>
+        <control/>
+		<control/>
+		<control/>
 		<control caption="&#160;Preferiraj torrent izvore"/>
 		<control caption="_EndGame:"/>
 		<control caption="Omogući EndGame način prilikom dovršenja torrentsa"/>
 		<control caption="Ovde _Sačuvaj Torrente::"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="_Torrent Creator"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Default Tracker:"/>
 		<control/>
 	</dialog>
@@ -3490,7 +3507,8 @@
 		<control/>
 		<control caption="Podešavanja:"/>
 		<control caption="Vrednost:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Opis:"/>
 		<control/>
 	</dialog>
@@ -3513,18 +3531,23 @@
 		<control caption="_Capacity:"/>
 		<control caption="Enable this queue"/>
 		<control caption="Minimum number of transfers:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Maximum number of transfers:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Maximum number waiting in queue:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="_Service Parameters:"/>
 		<control caption="Saturated bandwidth percentage:"/>
 		<control/>
 		<control caption="Upload bandwidth for this queue:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Rotate after N seconds:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="OK"/>
 		<control caption="Odustani"/>
 		<control caption="Reward uploaders"/>
@@ -3598,7 +3621,8 @@
 		<control caption="&#160;(odaberite)"/>
 		<control caption="&#160;(odaberite)| dečko| devojka| muškarac| žena"/>
 		<control caption="Iz:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CWizardNetworksPage" cookie="StBuStBuStBuSt" caption="Dobrodošli u Shareazu [6 of 7]">
@@ -3643,7 +3667,8 @@
 		<control caption="Nadimak:"/>
 		<control/>
 		<control caption="Pravo Ime:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Podaci o Polu i Starosti:"/>
 		<control caption="|Muško|Žensko"/>
 		<control caption="Pol:"/>
@@ -3730,7 +3755,8 @@
 	<dialog name="CLanguageDlg" cookie="" caption="Odaberite Jezik"/>
 	<dialog name="CConnectToDlg" cookie="BuCoEdBuCoBuBuBu" caption="Spoji se|Pogledaj šta ima">
 		<control caption="Započmi novu vezu sa hostom ili serverom:|Pogledaj šta ima ovaj host:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Mrežni _Protokol:"/>
 		<control caption="Gnutella1 (auto)|Gnutella2 (auto)|eDonkey2000"/>
 		<control caption="_Suppress Ultrapeer"/>
@@ -3739,7 +3765,8 @@
 	</dialog>
 
 	<dialog name="CDownloadDlg" cookie="StStStEdBuBuStStBu" caption="Skini Datoteku ili Torrent">
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Ako želite nešto skinuti s interneta Shareaza je prava stvar za vas. Samo upišite ili zalepite URL ili URI u polje i pretisnite Enter."/>
 		<control/>
 		<control caption="Skini"/>
@@ -3750,7 +3777,8 @@
 	</dialog>
 
 	<dialog name="CNewSearchDlg" cookie="EdCoBuBu" caption="Nova Potraga|Ponovi Potragu|Nađi u Kolekciji">
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Traži"/>
 		<control caption="Odustani"/>
 	</dialog>
@@ -3765,7 +3793,8 @@
 		<control caption="Maximalno:"/>
 		<control/>
 		<control caption="Sa barem:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="izvora."/>
 		<control caption="Sakrij:"/>
 		<control caption="Zauzete hostove"/>
@@ -3805,7 +3834,9 @@
 	<dialog name="CDownloadMonitorDlg" cookie="StStStStStStStStStStStStStBuBuBuBuBu" caption="Skidanje : Shareaza">
 		<control caption="Shareaza trenutno skida:"/>
 		<control caption="..."/>
-		<control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="Ukupna brzina razmene:"/>
 		<control caption="..."/>
 		<control caption="Još potrebno:"/>
@@ -3823,7 +3854,10 @@
 
 	<dialog name="CFileGeneralPage" cookie="StEdEdEdEdStStEdStEdStEdStEdEdEd" caption="Opšti">
 		<control caption="Universal Resource Names (URNs)"/>
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="Atributi Datoteke"/>
 		<control caption="Lokacija:"/>
 		<control/>
@@ -3832,11 +3866,14 @@
 		<control caption="Menjano:"/>
 		<control/>
 		<control caption="Veličina:"/>
-		<control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CFileMetadataPage" cookie="CoEd" caption="Metadata">
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CFileCommentsPage" cookie="StStCoStEdEd" caption="Moja Kritika">
@@ -3844,7 +3881,8 @@
 		<control caption="Ja ocenjujem s:"/>
 		<control caption="(Bez Ocene)|Lažnjak/Greška/Zavodi|Loše|Srednje|Dobro|Vrlo Dobro|Odlično"/>
 		<control caption="Moja Kritika i Komentar"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CFileSharingPage" cookie="StBuBuBuStCoStSyEd" caption="Deljenje">
@@ -3855,13 +3893,15 @@
 		<control caption="Upload Queue Selection Tag(s)"/>
 		<control/>
 		<control caption="-Mreže za deljenje"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CFileSourcesPage" cookie="StStEdSyBuBuEd" caption="Izvori">
 		<control caption="Poznati Izvori"/>
 		<control caption="Dodaj Novi Izvor"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Dod_aj"/>
 		<control caption="Ukloni"/>
 		<control/>
@@ -3869,7 +3909,8 @@
 
 	<dialog name="CFileCopyDlg" cookie="StStmsBuBumsStSt" caption="Kopiraj Datoteke|Premesti Datoteke">
 		<control caption="Odabrali ste %i Datoteka(u) za kopiranje u sledeću fasciklu:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="OK"/>
 		<control caption="Odustani"/>
 		<control/>
@@ -3899,7 +3940,8 @@
 		<control caption="Legenda"/>
 		<control caption="Sampling _Frequency:"/>
 		<control caption="Period između sampleova:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="ms"/>
 		<control caption="Ime:"/>
 		<control/>
@@ -3911,7 +3953,8 @@
 		<control caption="OK"/>
 		<control caption="Odustani"/>
 		<control caption="Izvor:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="Parametar:"/>
 		<control caption="Jedinica:"/>
 		<control/>
@@ -3922,7 +3965,8 @@
 	</dialog>
 
 	<dialog name="CSchemaColumnsDlg" cookie="CoSyBuBuSt" caption="Odaberite Kolonu iz Šeme">
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="OK"/>
 		<control caption="Odustani"/>
 		<control caption="Izaberite šemu sa liste, zatim odaberite detalje koje želite da prikažete uz datoteke u fasckli, kao kolone ."/>
@@ -3936,9 +3980,15 @@
 		<control/>
 		<control caption="Mrež_na Adresa:"/>
 		<control caption="IP Adresa:"/>
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="Netmask:"/>
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="Filter Sadržaja:"/>
 		<control/>
 		<control caption="Nešto Isto"/>
@@ -3971,7 +4021,9 @@
 	<dialog name="CURLCopyDlg" cookie="StStStStStBuBu" caption="Kopiraj URI">
 		<control/>
 		<control caption="Vi možete kopirati URI za selektovanu datoteku u više različith formata. Molimo Vas izaberite foramat koji želite da koristite tako što ćete kliknuti na URIe ispod:"/>
-		<control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="Uključi _sebe kao stalni izvor u URL"/>
 		<control caption="Odustani"/>
 	</dialog>
@@ -3995,7 +4047,10 @@
 		<control caption="You have clicked on a Shareaza-powered URI which links to the following content on the network:"/>
 		<control caption="You have clicked on a Shareaza-powered URL which will connect you to the following host or server:"/>
 		<control caption="You have clicked on a Shareaza-powered URI which will allow you to browse the shared files available on the following host:"/>
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="Odaberite šta želite da Shareaza uradi:"/>
 		<control caption="Skini Sa_d"/>
 		<control caption="Traži Datoteku"/>
@@ -4017,7 +4072,8 @@
 	<dialog name="CFilePreviewDlg" cookie="StStStmsStBu" caption="Pametni pregled skinutog...">
 		<control/>
 		<control caption="Shareaza stvara pregled skinutog dela:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="(kopiram skinute delove u novu datoteku za pregled)"/>
 		<control caption="Odustani"/>
 	</dialog>
@@ -4045,7 +4101,10 @@
 	</dialog>
 
 	<dialog name="CExistingFileDlg" cookie="StStStStStBuBuBuBuBuSt" caption="Postojeća Datoteka">
-		<control/><control/><control/><control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
 		<control caption="Ovu datoteku već imate u vašoj kolekciji.Šta želite učiniti?"/>
 		<control caption="Pokaži mi datoteku u mojoj kolekciji"/>
 		<control caption="Ponovno skini"/>
@@ -4068,7 +4127,8 @@
 	<dialog name="CDonkeyServersDlg" cookie="StStEdmsBuBu" caption="Download Server.met File">
 		<control/>
 		<control caption="Možete skinuti eDonkey2000 server.met datoteku sa neta da bi obnovili vašu listu servera."/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="OK"/>
 		<control caption="Odustani"/>
 	</dialog>
@@ -4166,7 +4226,8 @@
 
 	<dialog name="CDownloadGroupDlg" cookie="BuEdSyBuCoBuBuBuBuBuEdBu" caption="Download Group Podešavanja">
 		<control caption="Ime:"/>
-		<control/><control/>
+		<control/>
+		<control/>
 		<control caption="_Filteri:"/>
 		<control/>
 		<control caption="Dod_aj"/>
@@ -4199,7 +4260,8 @@
 	<dialog name="CDownloadReviewDlg" cookie="StBuSyEd" caption="Skini Kritike">
 		<control/>
 		<control caption="OK"/>
-		<control/><control/>
+		<control/>
+		<control/>
 	</dialog>
 
 	<dialog name="CDecodeMetadataDlg" cookie="BuBuStCo" caption="Lokalizacija Metadate">
