Removed Shareaza*com References from Translations
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7312 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -492,12 +492,12 @@
         </menu>
         <separator />
         <menu text="_المواقع">
-          <item id="ID_HELP_HOMEPAGE" text="_Shareaza.com" />
+          <item id="ID_HELP_HOMEPAGE" text="_Shareaza.Sourceforge.net" />
           <separator />
           <item id="ID_HELP_FORUMS" text="_منتديات Shareaza" />
           <!-- <item id="ID_HELP_UPDATE" text="آخر الأخبار"/>
           <item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
-				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
+	  <item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
         </menu>
         <separator />
         <item id="ID_HELP_ABOUT" text="_معلومات عن Shareaza ..." />
@@ -587,16 +587,16 @@
         </menu>
         <separator />
         <menu text="_مواقع ويب">
-          <item id="ID_HELP_HOMEPAGE" text="_Shareaza.com" />
+          <item id="ID_HELP_HOMEPAGE" text="_Shareaza.Sourceforge.net" />
           <separator />
           <item id="ID_HELP_FORUMS" text="_منتديات Shareaza" />
           <!-- <item id="ID_HELP_UPDATE" text="آخر الأخبار"/>
-				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
-				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-			</menu>
-			<separator/>
-			<item id="ID_HELP_ABOUT" text="_معلومات عن Shareaza..."/>
+		<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
+		<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
 		</menu>
+	  <separator/>
+	  <item id="ID_HELP_ABOUT" text="_معلومات عن Shareaza..."/>
+	</menu>
 	</menu>
 	<menu name="CMainWnd.Windowed" type="bar">
 		<menu text="_شبكة">
@@ -676,7 +676,7 @@
 			</menu>
 			<separator/>
 			<menu text="_Websites">
-				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
+				<item id="ID_HELP_HOMEPAGE" text="_Sourceforge.net"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza _منتديات"/>
 				<item id="ID_HELP_UPDATE" text="آخر الأخبار"/>
