--- a/Languages/default-cz.xml
+++ b/Languages/default-cz.xml
@@ -2227,7 +2227,7 @@
 	<tip id="ID_HELP_ROUTER" message="Získejte pomoc při nastavení vašeho routeru nebo firewallu."/>
 	<tip id="ID_HELP_FORUMS" message="Navštivte diskusní fóra Shareazy."/>
 	<tip id="ID_HELP_GUIDE" message="Navštivte Průvodce uživatelů Shareazy."/>
-	<tip id="ID_HELP_HOMEPAGE" message="Navštivte webovou stránku Shareaza.com."/>
+	<tip id="ID_HELP_HOMEPAGE" message="Navštivte webovou stránku Shareaza.Sourceforge.net."/>
 	<tip id="ID_HELP_SECURITY" message="Pomoc při ochraně vašeho systému před nebezpečnými programy."/>
 	<tip id="ID_HELP_UPDATE" message="Zkontrolujte novinky a aktualizace."/>
 	<tip id="ID_HELP_TEST" message="Spustit test připojení."/>
