--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -2243,7 +2243,7 @@
 	<tip id="ID_HELP_ROUTER" message="Zdobądź pomoc przy konfigurowaniu swojego routera lub firewalla."/>
 	<tip id="ID_HELP_FORUMS" message="Odwiedź Fora dyskusyjne Shareazy."/>
 	<tip id="ID_HELP_GUIDE" message="Odwiedź Przewodnik użytkownika Shareazy."/>
-	<tip id="ID_HELP_HOMEPAGE" message="Odwiedź stronę Shareaza.com."/>
+	<tip id="ID_HELP_HOMEPAGE" message="Odwiedź stronę Shareaza.Sourceforge.net."/>
 	<tip id="ID_HELP_SECURITY" message="Pomóż ochraniać swój system przed wrogimi programami."/>
 	<tip id="ID_HELP_UPDATE" message="Sprawdź dla nowości i aktualizacji."/>
 	<tip id="ID_HELP_WEB_1" message="Odwiedź tą stronę"/>
