--- a/Languages/default-sl-SI.xml
+++ b/Languages/default-sl-SI.xml
@@ -2251,7 +2251,7 @@
 	<tip id="ID_HELP_ROUTER" message="Pomoč za nastavljanje vašega usmerjevalnika ali požarnega zidu."/>
 	<tip id="ID_HELP_FORUMS" message="Obisk Shareaza spetnih forumov."/>
 	<tip id="ID_HELP_GUIDE" message="Obisk Shareaza sletnih navodil."/>
-	<tip id="ID_HELP_HOMEPAGE" message="Obisk spletne strani Shareaza.com"/>
+	<tip id="ID_HELP_HOMEPAGE" message="Obisk spletne strani Shareaza.Sourceforge.net"/>
 	<tip id="ID_HELP_SECURITY" message="Pomoč pri obvarovanju vašega sistema pred sovražnimi programi."/>
 	<tip id="ID_HELP_UPDATE" message="Pregled novic in posodobitev."/>
 	<tip id="ID_HELP_WEB_1" message="Obisk tega spletišča"/>
