--- a/Languages/default-fr.xml
+++ b/Languages/default-fr.xml
@@ -2225,7 +2225,7 @@
 	<tip id="ID_HELP_ROUTER" message="Obtenir de l'aide pour configurer son routeur ou son pare-feu."/>
 	<tip id="ID_HELP_FORUMS" message="Visiter les forums de discussion Shareaza."/>
 	<tip id="ID_HELP_GUIDE" message="Visiter le guide utilisateurs Shareaza."/>
-	<tip id="ID_HELP_HOMEPAGE" message="Visiter le site web Shareaza.com."/>
+	<tip id="ID_HELP_HOMEPAGE" message="Visiter le site web Shareaza.Sourceforge.net."/>
 	<tip id="ID_HELP_SECURITY" message="Aide pour protéger son système des programmes hostiles"/>
 	<tip id="ID_HELP_UPDATE" message="Vérifier le présence d'informations et de mises à jour."/>
 	<tip id="ID_HELP_TEST" message="Fais le test de connexion."/>
