--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default English Skin File -->
-<!-- Translation based on default-en.xml SVN rev.7300 -->
+<!-- Translation based on default-en.xml SVN rev.7310 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -548,9 +548,9 @@
 		  </menu>
 		  <separator/>
 		  <item id="ID_HELP_VERSION_CHECK" text="Procurar nova _versão"/>
+		  <item id="ID_HELP_DONATE" text="_Doar para o Projeto Shareaza!"/>
 		  <separator/>
 		  <item id="ID_HELP_ABOUT" text="_Sobre o Shareaza..."/>
-		  <item id="ID_HELP_DONATE" text="_Doar para o Projeto Shareaza!"/>
 		</menu>
 	</menu>
 	<menu name="CMainWnd.Tabbed" type="bar">
@@ -647,9 +647,9 @@
 		  </menu>
 		  <separator/>
 		  <item id="ID_HELP_VERSION_CHECK" text="Procurar nova _versão"/>
+			<item id="ID_HELP_DONATE" text="_Doar para o Projeto do Shareaza"/>
 		  <separator/>
 		  <item id="ID_HELP_ABOUT" text="_Sobre o Shareaza..."/>
-		  <item id="ID_HELP_DONATE" text="_Doar para o Projeto Shareaza!"/>
 		</menu>
 	</menu>
 	<menu name="CMainWnd.Windowed" type="bar">
@@ -1603,7 +1603,7 @@
 		<newline gap="0"/>
 		<group id="1">
 		  <icon res="130" width="32" height="32" target="raza:command:ID_NETWORK_CONNECT"/><gap size="8"/>
-		  <heading align="middle">S E J A &#160; C O N E C T A D O</heading>
+		  <heading align="middle">E S T E J A &#160; C O N E C T A D O</heading>
 		  <newline gap="8" indent="42"/>
 		  <text>Bem-vindo ao Shareaza!</text>
 		  <newline gap="8" indent="42"/>
@@ -1876,8 +1876,7 @@
 		<text>O Gerente das Configurações do Shareaza permite aos usuários avançados modificar
 			completamente o Shareaza. As configurações na seção</text>
 		<text format="b">Internet </text>
-		<text>  controlam como o Shareaza interage com outros nodes dentro das redes peer-to-peer.
-		</text>
+		<text>  controlam como o Shareaza interage com outros nodes dentro das redes peer-to-peer. </text>
 		<newline gap="16" indent="16"/>
 		<link target="raza:page:CConnectionSettingsPage" format="b">Conexão:</link>
 		<gap size="4"/>
@@ -2325,7 +2324,7 @@
 	<tip id="ID_HELP_ROUTER" message="Consiga ajuda para configurar o seu Roteador ou Firewall."/>
 	<tip id="ID_HELP_FORUMS" message="Visitar os fóruns de discussão do Shareaza."/>
 	<tip id="ID_HELP_GUIDE" message="Visite o Guia dos Usuários do Shareaza."/>
-	<tip id="ID_HELP_HOMEPAGE" message="Visitar o site Shareaza.com."/>
+	<tip id="ID_HELP_HOMEPAGE" message="Visitar o site Shareaza.Sourceforge.net."/>
 	<tip id="ID_HELP_SECURITY" message="Ajuda para proteger o seu sistema de programas hostis"/>
 	<tip id="ID_HELP_UPDATE" message="Checar por novidades e atualizações."/>
 	<tip id="ID_HELP_TEST" message="Execute o teste de conexão."/>
@@ -2609,6 +2608,7 @@
 	<string id="8010" value="Esta é uma versão de pré-lançamento do Shareaza e o período de testes beta acabou. Por favor baixar a versão completa oficial de http://shareaza.sourceforge.net/."/>
 	<string id="8011" value="Mudar a visualização fechará quaisquer janelas que estejam abertas. Você gostaria de mudar agora?"/>
 	<string id="8012" value="Informação do Torrent"/>
+	<string id="8014" value="Propriedades do Download"/>
 	<string id="8060" value="Modo Hub/Ultrapeer com %lu vizinho(s). %s na sua bilioteca local."/>
 	<string id="8061" value="Modo Ultrapeer com %lu vizinho(s). %s na sua biblioteca Local."/>
 	<string id="8062" value="Modo Hub com %lu vizinho(s). %s na biblioteca local."/>
