Re-added removed Image Viewer context menu for translations
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7313 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -1553,6 +1553,15 @@
 		<item id="ID_CHAT_TIMESTAMP" text="_Timestamp"/>
 		<item id="ID_CHAT_CLEAR" text="C_lear Window"/>
 	</menu>
+	<!-- PLUGIN MENUS -->
+	<menu name="ImageViewer_Context">
+		<item id="ImageViewer_BestFit" text="_Best Fit"/>
+		<item id="ImageViewer_ActualSize" text="_Actual Size"/>
+		<separator/>
+		<item id="ImageViewer_Refresh" text="_Refresh"/>
+		<separator/>
+		<item id="ImageViewer_Close" text="_Close"/>
+	</menu>
 	<!-- IRC WINDOW -->
 	<menu name="CIRCTabRClick">
 		<item id="ID_IRC_CLOSETAB" text="_Close"/>
